@@ -6,5 +6,8 @@
 /* Define to the name of the distribution.  */
 #undef PACKAGE
 
+/* Define to 1 if ANSI function prototypes are usable.  */
+#undef PROTOTYPES
+
 /* Define to the version of the distribution.  */
 #undef VERSION
